# paio

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/simple/: CMakeLists.txt  Message.h  echo.cpp  simple.cpp  simple2.cpp  simple2main.cpp
include/paio/: broker.h  object_broker.h  paio.h  ptr.h  version.h
include/paio/datatype/: json.h
include/paio/ec/: periodic_execution_context.h
include/paio/http/: client.h  server.h
include/paio/object/: json.h  object.h  object_dictionary.h
include/paio/process/: process.h
src/: CMakeLists.txt  broker.cpp  object_broker.cpp
src/datatype/: json.cpp
src/ec/: periodic_execution_context.cpp
src/http/: client.cpp  server.cpp
src/object/: json.cpp  object_dictionary.cpp
src/process/: process.cpp
test/: CMakeLists.txt  broker_test.cpp  http_test.cpp  json_test.cpp  www_test.cpp
